Update on Overleaf.

--- a/references.bib
+++ b/references.bib
@@ -944,5 +944,331 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{1991ApJ...373..354K,
+   author = {{Kochanek}, C.~S.},
+    title = "{The implications of lenses for galaxy structure}",
+  journal = {\apj},
+ keywords = {Astronomical Models, Galactic Structure, Gravitational Lenses, Gravitational Fields, Imaging Techniques, Quadrupoles, Radio Astronomy, Red Shift},
+     year = 1991,
+    month = jun,
+   volume = 373,
+    pages = {354-368},
+      doi = {10.1086/170057},
+   adsurl = {http://adsabs.harvard.edu/abs/1991ApJ...373..354K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+@ARTICLE{2003ApJ...587..143R,
+   author = {{Rusin}, D. and {Kochanek}, C.~S. and {Falco}, E.~E. and {Keeton}, C.~R. and 
+	{McLeod}, B.~A. and {Impey}, C.~D. and {Leh{\'a}r}, J. and {Mu{\~n}oz}, J.~A. and 
+	{Peng}, C.~Y. and {Rix}, H.-W.},
+    title = "{The Evolution of a Mass-selected Sample of Early-Type Field Galaxies}",
+  journal = {\apj},
+   eprint = {astro-ph/0211229},
+ keywords = {Galaxies: Elliptical and Lenticular, cD, Galaxies: Evolution, Cosmology: Gravitational Lensing},
+     year = 2003,
+    month = apr,
+   volume = 587,
+    pages = {143-159},
+      doi = {10.1086/346206},
+   adsurl = {http://adsabs.harvard.edu/abs/2003ApJ...587..143R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2003ApJ...583..606K,
+   author = {{Koopmans}, L.~V.~E. and {Treu}, T.},
+    title = "{The Structure and Dynamics of Luminous and Dark Matter in the Early-Type Lens Galaxy of 0047-281 at z = 0.485}",
+  journal = {\apj},
+   eprint = {astro-ph/0205281},
+ keywords = {Galaxies: Elliptical and Lenticular, cD, Galaxies: Evolution, Galaxies: Formation, Galaxies: Kinematics and Dynamics, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2003,
+    month = feb,
+   volume = 583,
+    pages = {606-615},
+      doi = {10.1086/345423},
+   adsurl = {http://adsabs.harvard.edu/abs/2003ApJ...583..606K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2002ApJ...568L...5K,
+   author = {{Koopmans}, L.~V.~E. and {Treu}, T.},
+    title = "{The Stellar Velocity Dispersion of the Lens Galaxy in MG 2016+112 at z=1.004}",
+  journal = {\apjl},
+   eprint = {astro-ph/0201017},
+ keywords = {Galaxies: Elliptical and Lenticular, cD, Galaxies: Evolution, Galaxies: Formation, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2002,
+    month = mar,
+   volume = 568,
+    pages = {L5-L8},
+      doi = {10.1086/340143},
+   adsurl = {http://adsabs.harvard.edu/abs/2002ApJ...568L...5K},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2001ApJ...554.1216C,
+   author = {{Cohn}, J.~D. and {Kochanek}, C.~S. and {McLeod}, B.~A. and 
+	{Keeton}, C.~R.},
+    title = "{Constraints on Galaxy Density Profiles from Strong Gravitational Lensing: The Case of B1933+503}",
+  journal = {\apj},
+   eprint = {astro-ph/0008390},
+ keywords = {Cosmology: Dark Matter, Galaxies: Halos, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 2001,
+    month = jun,
+   volume = 554,
+    pages = {1216-1226},
+      doi = {10.1086/321412},
+   adsurl = {http://adsabs.harvard.edu/abs/2001ApJ...554.1216C},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005MNRAS.360.1333W,
+   author = {{Wayth}, R.~B. and {Warren}, S.~J. and {Lewis}, G.~F. and {Hewett}, P.~C.
+	},
+    title = "{The lens and source of the optical Einstein ring gravitational lens ER 0047-2808}",
+  journal = {\mnras},
+   eprint = {astro-ph/0410253},
+ keywords = {gravitational lensing, galaxies: high redshift, galaxies: individual: 0047-2808},
+     year = 2005,
+    month = jul,
+   volume = 360,
+    pages = {1333-1344},
+      doi = {10.1111/j.1365-2966.2005.09118.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2005MNRAS.360.1333W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2005ApJ...623...31D,
+   author = {{Dye}, S. and {Warren}, S.~J.},
+    title = "{Decomposition of the Visible and Dark Matter in the Einstein Ring 0047-2808 by Semilinear Inversion}",
+  journal = {\apj},
+   eprint = {astro-ph/0411452},
+ keywords = {Cosmology: Dark Matter, Cosmology: Gravitational Lensing},
+     year = 2005,
+    month = apr,
+   volume = 623,
+    pages = {31-41},
+      doi = {10.1086/428340},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...623...31D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2007ApJ...671.1196M,
+   author = {{Marshall}, P.~J. and {Treu}, T. and {Melbourne}, J. and {Gavazzi}, R. and 
+	{Bundy}, K. and {Ammons}, S.~M. and {Bolton}, A.~S. and {Burles}, S. and 
+	{Larkin}, J.~E. and {Le Mignant}, D. and {Koo}, D.~C. and {Koopmans}, L.~V.~E. and 
+	{Max}, C.~E. and {Moustakas}, L.~A. and {Steinbring}, E. and 
+	{Wright}, S.~A.},
+    title = "{Superresolving Distant Galaxies with Gravitational Telescopes: Keck Laser Guide Star Adaptive Optics and Hubble Space Telescope Imaging of the Lens System SDSS J0737+3216}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {0710.0637},
+ keywords = {Galaxies: Fundamental Parameters, Cosmology: Gravitational Lensing, Instrumentation: Adaptive Optics, Methods: Data Analysis, Techniques: High Anular Resolution},
+     year = 2007,
+    month = dec,
+   volume = 671,
+    pages = {1196-1211},
+      doi = {10.1086/523091},
+   adsurl = {http://adsabs.harvard.edu/abs/2007ApJ...671.1196M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2017MNRAS.464.4823B,
+   author = {{Bellagamba}, F. and {Tessore}, N. and {Metcalf}, R.~B.},
+    title = "{Zooming into the Cosmic Horseshoe: new insights on the lens profile and the source shape}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1610.06003},
+ keywords = {gravitational lensing: strong, galaxies: individual: Cosmic Horseshoe, galaxies: structure, dark matter},
+     year = 2017,
+    month = feb,
+   volume = 464,
+    pages = {4823-4834},
+      doi = {10.1093/mnras/stw2726},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.464.4823B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016ApJ...833..264S,
+   author = {{Shu}, Y. and {Bolton}, A.~S. and {Mao}, S. and {Kochanek}, C.~S. and 
+	{P{\'e}rez-Fournon}, I. and {Oguri}, M. and {Montero-Dorta}, A.~D. and 
+	{Cornachione}, M.~A. and {Marques-Chaves}, R. and {Zheng}, Z. and 
+	{Brownstein}, J.~R. and {M{\'e}nard}, B.},
+    title = "{The BOSS Emission-line Lens Survey. IV. Smooth Lens Models for the BELLS GALLERY Sample}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1608.08707},
+ keywords = {dark matter, galaxies: elliptical and lenticular, cD, gravitational lensing: strong, techniques: image processing},
+     year = 2016,
+    month = dec,
+   volume = 833,
+      eid = {264},
+    pages = {264},
+      doi = {10.3847/1538-4357/833/2/264},
+   adsurl = {http://adsabs.harvard.edu/abs/2016ApJ...833..264S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2013ApJ...766...70S,
+   author = {{Suyu}, S.~H. and {Auger}, M.~W. and {Hilbert}, S. and {Marshall}, P.~J. and 
+	{Tewes}, M. and {Treu}, T. and {Fassnacht}, C.~D. and {Koopmans}, L.~V.~E. and 
+	{Sluse}, D. and {Blandford}, R.~D. and {Courbin}, F. and {Meylan}, G.
+	},
+    title = "{Two Accurate Time-delay Distances from Strong Lensing: Implications for Cosmology}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1208.6010},
+ keywords = {distance scale, galaxies: individual: RXJ1131{\ndash}1231, gravitational lensing: strong, methods: data analysis},
+     year = 2013,
+    month = apr,
+   volume = 766,
+      eid = {70},
+    pages = {70},
+      doi = {10.1088/0004-637X/766/2/70},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...766...70S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1992ARA&A..30..311B,
+   author = {{Blandford}, R.~D. and {Narayan}, R.},
+    title = "{Cosmological applications of gravitational lensing}",
+  journal = {\araa},
+ keywords = {Cosmology, Dark Matter, Galactic Clusters, Gravitational Lenses, Hubble Constant, Quasars, Hubble Space Telescope, Red Shift, Sky Surveys (Astronomy), Very Long Base Interferometry},
+     year = 1992,
+   volume = 30,
+    pages = {311-358},
+      doi = {10.1146/annurev.aa.30.090192.001523},
+   adsurl = {http://adsabs.harvard.edu/abs/1992ARA%26A..30..311B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2009MNRAS.392..945V,
+   author = {{Vegetti}, S. and {Koopmans}, L.~V.~E.},
+    title = "{Bayesian strong gravitational-lens modelling on adaptive grids: objective detection of mass substructure in Galaxies}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {0805.0201},
+ keywords = {gravitational lensing , galaxies: haloes , galaxies: structure , dark matter},
+     year = 2009,
+    month = jan,
+   volume = 392,
+    pages = {945-963},
+      doi = {10.1111/j.1365-2966.2008.14005.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2009MNRAS.392..945V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2000ApJ...544...98W,
+   author = {{Witt}, H.~J. and {Mao}, S. and {Keeton}, C.~R.},
+    title = "{Analytic Time Delays and H$_{0}$ Estimates for Gravitational Lenses}",
+  journal = {\apj},
+   eprint = {astro-ph/0004069},
+ keywords = {Cosmology: Distance Scale, Cosmology: Gravitational Lensing},
+     year = 2000,
+    month = nov,
+   volume = 544,
+    pages = {98-103},
+      doi = {10.1086/317201},
+   adsurl = {http://adsabs.harvard.edu/abs/2000ApJ...544...98W},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1964MNRAS.128..307R,
+   author = {{Refsdal}, S.},
+    title = "{On the possibility of determining Hubble's parameter and the masses of galaxies from the gravitational lens effect}",
+  journal = {\mnras},
+     year = 1964,
+   volume = 128,
+    pages = {307},
+      doi = {10.1093/mnras/128.4.307},
+   adsurl = {http://adsabs.harvard.edu/abs/1964MNRAS.128..307R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016A&ARv..24...11T,
+   author = {{Treu}, T. and {Marshall}, P.~J.},
+    title = "{Time delay cosmography}",
+  journal = {\aapr},
+archivePrefix = "arXiv",
+   eprint = {1605.05333},
+ keywords = {Cosmology, Gravitational lensing, Gravity, Dark energy},
+     year = 2016,
+    month = jul,
+   volume = 24,
+      eid = {11},
+    pages = {11},
+      doi = {10.1007/s00159-016-0096-8},
+   adsurl = {http://adsabs.harvard.edu/abs/2016A%26ARv..24...11T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016MNRAS.463.3115T,
+   author = {{Tessore}, N. and {Bellagamba}, F. and {Metcalf}, R.~B.},
+    title = "{LENSED: a code for the forward reconstruction of lenses and sources from strong lensing observations}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1505.07674},
+ keywords = {gravitational lensing: strong, methods: data analysis, methods: numerical, methods: statistical, techniques: image processing},
+     year = 2016,
+    month = dec,
+   volume = 463,
+    pages = {3115-3128},
+      doi = {10.1093/mnras/stw2212},
+   adsurl = {http://adsabs.harvard.edu/abs/2016MNRAS.463.3115T},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2016arXiv160604548M,
+   author = {{Meneghetti}, M. and {Natarajan}, P. and {Coe}, D. and {Contini}, E. and 
+	{De Lucia}, G. and {Giocoli}, C. and {Acebron}, A. and {Borgani}, S. and 
+	{Bradac}, M. and {Diego}, J.~M. and {Hoag}, A. and {Ishigaki}, M. and 
+	{Johnson}, T.~L. and {Jullo}, E. and {Kawamata}, R. and {Lam}, D. and 
+	{Limousin}, M. and {Liesenborgs}, J. and {Oguri}, M. and {Sebesta}, K. and 
+	{Sharon}, K. and {Williams}, L.~L.~R. and {Zitrin}, A.},
+    title = "{The Frontier Fields Lens Modeling Comparison Project}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1606.04548},
+ keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
+     year = 2016,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160604548M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2010A&A...514A..93M,
+   author = {{Meneghetti}, M. and {Rasia}, E. and {Merten}, J. and {Bellagamba}, F. and 
+	{Ettori}, S. and {Mazzotta}, P. and {Dolag}, K. and {Marri}, S.
+	},
+    title = "{Weighing simulated galaxy clusters using lensing and X-ray}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0912.1343},
+ keywords = {galaxies: clusters: general, X-ray: galaxies: clusters, gravitational lensing: strong, gravitational lensing: weak},
+     year = 2010,
+    month = may,
+   volume = 514,
+      eid = {A93},
+    pages = {A93},
+      doi = {10.1051/0004-6361/200913222},
+   adsurl = {http://adsabs.harvard.edu/abs/2010A%26A...514A..93M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2008A&A...482..403M,
+   author = {{Meneghetti}, M. and {Melchior}, P. and {Grazian}, A. and {De Lucia}, G. and 
+	{Dolag}, K. and {Bartelmann}, M. and {Heymans}, C. and {Moscardini}, L. and 
+	{Radovich}, M.},
+    title = "{Realistic simulations of gravitational lensing by galaxy clusters: extracting arc parameters from mock DUNE images}",
+  journal = {\aap},
+archivePrefix = "arXiv",
+   eprint = {0711.3418},
+ keywords = {gravitational lensing, galaxies: clusters: general, cosmology: observations, methods: numerical, submillimeter},
+     year = 2008,
+    month = may,
+   volume = 482,
+    pages = {403-418},
+      doi = {10.1051/0004-6361:20079119},
+   adsurl = {http://adsabs.harvard.edu/abs/2008A%26A...482..403M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
