--- a/paper.tex
+++ b/paper.tex
@@ -129,8 +129,8 @@ gravitational lensing -- cosmology
 \section{Introduction}
 \label{sec:introduction}
 
-Strong gravitational lenses are rare cases where a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.  These take the form of multiple images of a quasar and Einstein rings surrounding a galaxy and of highly distorted arcs seen through galaxy groups and clusters.  The first strong lens was discovered in 1979 \citep{1979Natur.279..381W} and since then many valuable scientific uses have been found for them.  They have been used to study the mass distribution in galaxies and substructure in dark matter.  They have been used to measure the Hubble constant and other cosmological parameters.
-Their magnification has been used as a natural telescope to observe otherwise undetectable objects.   They have put limits on the self interaction of dark matter and on the theory of gravitation.  Through microlensing they have been used to study the structure of quasars.   To access this wealth of information the first step is to find the lenses.  \red{Could use some citations in this paragraph.}
+Strong gravitational lenses are rare cases where a distant galaxy or quasar is aligned so closely with a foreground galaxy or cluster of galaxies  that the gravitational field of the foreground object creates multiple, highly distorted images of the background object.  These take the form of multiple images of a quasar and Einstein rings surrounding a galaxy and of highly distorted arcs seen through galaxy groups and clusters.  The first strong lens was discovered in 1979 \citep{1979Natur.279..381W} and since then many valuable scientific uses have been found for them.  They have been used to study how dark matter is distributed in galaxies and clusters \citep[e.g.][]{1991ApJ...373..354K,2001ApJ...554.1216C,2002ApJ...568L...5K,2003ApJ...587..143R,2003ApJ...583..606K,2005MNRAS.360.1333W,2005ApJ...623...31D,2009MNRAS.392..945V,2016MNRAS.463.3115T}.  They have been used to measure the Hubble constant and other cosmological parameters \citep[e.g.][]{1964MNRAS.128..307R,1992ARA&A..30..311B,2000ApJ...544...98W,2013ApJ...766...70S,2016A&ARv..24...11T}.
+Their magnification has been used as a natural telescope to observe otherwise undetectable objects \citep[e.g][]{2007ApJ...671.1196M,2017MNRAS.464.4823B,2016ApJ...833..264S}.   They have put limits on the self interaction of dark matter and on the theory of gravitation.  Through microlensing they have been used to study the structure of quasars.   To access this wealth of information the first step is to find the lenses.  \red{Could use some citations in this paragraph.}
 
 The Square Kilometer Array (SKA)\footnote{http://skatelescope.org/}, the Large Synoptic Survey Telescope (LSST)\footnote{https://www.lsst.org/} and the Euclid space telescope\footnote{https://www.euclid-ec.org/} are expected to increase the number of potential lenses by orders of magnitude \citep{collett_15,euclidSLWGwhitepaper,2015aska.confE..84M,2010MNRAS.405.2579O}.   For example it is estimated that there will be approximately 200,000 observable galaxy-galaxy lenses in the Euclid data set among \red{tens of billions (better number??)} of potential objects .  So far, less than a thousand lenses have been found in total across many heterogeneous data sets.  These surveys will bring a new era for strong lensing where large relatively well defined samples of lenses will be possible.  It will also require handling much larger quantities of data than has been customary in this field.
 
@@ -140,17 +140,17 @@ Galaxy scale lenses have also been searched for spectroscopicly by looking for h
 
 Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like features \citep{2006astro.ph..6757A,2007A&A...472..341S} and rings \citep{2014ApJ...785..144G,2014A&A...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007A&A...461..813C,2012ApJ...749...38M,2016A&A...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2010A&A...517A..25S}.
 
-More recently machine learning techniques that have become widely used in the fields computer image processing and artificial intelegence 
+More recently machine learning techniques that have become widely used in the fields computer image processing and artificial intelligence 
 have been applied to this problem and others in astronomy, in particular, artificial neural networks (ANNs) and support vector machines (SVM). These algorithms do not pick out particular predefined features, but learn from a training set which features are most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy they are beginning to be used for catagorizing galaxies morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017arXiv170207675P,2017MNRAS.465.4325O}.
 
-Given the future of this field with large amounts of data coming soon and many new ideas emerging we thought it would be a good time to stage a series of challenges to stimulate new work, determine what can realistically be done in lens finding and get a better idea of the strengths and weaknesses to different methods.  The long term goal is to get a set of algorithms that can handle Euclid, LSST or SKA data sets and produce high purity and high completeness lens samples with well defined efficiency or selection.  We anticipate further challenges in the future were the realism of the data simulations will become progressively more realistic.  Here we have chosen to concentrate on galaxy/small group scale lenses where the background source is a galaxy because we feel that this is were the most progress can be made and the scientific return is the highest, but QSO lenses and cluster/group lenses challenges may follow.
+Given the future of this field with large amounts of data coming soon and many new ideas emerging, it is timely to stage a series of challenges to stimulate new work, determine what can realistically be done in lens finding and get a better idea of the strengths and weaknesses to different methods.  The long term goal is to get a set of algorithms that can handle Euclid, LSST or SKA data sets and produce high purity and high completeness lens samples with well defined efficiency or selection.  We anticipate further challenges in the future were the realism of the data simulations will become progressively larger.  Here we have chosen to concentrate on galaxy/small group scale lenses where the background source is a galaxy because we feel that this is where the most progress can be made and the scientific return is the highest, but QSO lenses and cluster/group lenses challenges may follow.
 
 The paper is organized as follows.  The form of the challenge and its rules are described in the next section.  The methods used to simulate mock images of galaxies and gravitational lenses are described in section~\ref{sec:simulation}.  In section~\ref{sec:entries} each of the methods that were used to solve the challenge are briefly described.  We discuss the metrics used to evaluate entries in section~\ref{sec:figure_of_merit}.  The performance of each of the methods broken down in different ways is presented in section~\ref{sec:performance}.  Finally,  in section~\ref{sec:conclusion}, we conclude with a discussion of what was learned and how methods can be improved in the future.
 
 \section{The Challenge}
 \label{sec:challenge}
 
-The challenge was in fact two separate challenges that could be entered independently.  One was designed to mimic a single band of a future imaging data set from a satellite survey such as Euclid \citep{***} \red{(the latest description)}.  The other was designed to mimic ground based data with multiple bands, roughly modeled on the Kilo-Degree Survey (KiDS)\footnote{http://kids.strw.leidenuniv.nl/} \citep{2013ExA....35...25D} .    In neither case were the simulated images meant to precisely mock these surveys, but the surveys were used as guides to set noise levels, pixel sizes, sensitivities and other parameters.
+The challenge was in fact two separate challenges that could be entered independently.  One was designed to mimic a single band of a future imaging data set from a satellite survey such as Euclid \citep{***} \red{(the latest description)}.  The other was designed to mimic ground based data with multiple bands, roughly modeled on the Kilo-Degree Survey (KiDS)\footnote{http://kids.strw.leidenuniv.nl/} \citep{2013ExA....35...25D}. In neither case were the simulated images meant to precisely mock these surveys, but the surveys were used as guides to set noise levels, pixel sizes, sensitivities, and other parameters.
 
 In each case, a training set of 20,000 images in each band was provided for download at any time along with a key giving some properties of the object including whether it was a gravitational lens.  Each image was $101\times101$ pixels.  The researchers were free to download these sets and train their algorithms on them.  To enter the contest the participants needed to register with a team name at which point they would be given a unique key and the address of a test data set.  These data sets contained 100,000 candidates.  In the case of the multi-band ground-based set this was 400,000 images. The participant had 48 hours to upload a classification of all candidates consisting of a score between 0 and 1 -- 0 signifying the lowest confidence that it is a lens and 1 signifying the highest confidence that it is a lens.  This ranking could have been a simple binary (0 or 1) classification  or it could have been a continuous range of numbers representing the probability of being a lens or it could have been a finite number of confidence levels.  
 
@@ -159,26 +159,25 @@ The challenge was opened on November 25, 2016 and closed on February 5, 2017.
 \section{the simulations}
 \label{sec:simulation}
 
-Creating the mock images starts with a cosmological nbody simulation.  In this case it was the Millennium simulation \citep{2009MNRAS.398.1150B}.   A catalog of dark matter halos within a light-cone is constructed within the Millennium Observatory project \citep{2013MNRAS.428..778O}.   The challenge sets were based on a 1.6 sq.deg. light cone extending out to redshift 6.
-The halo catalog is read into the GLAMER lensing code \citep{2014MNRAS.445.1942M,2014MNRAS.445.1954P} to do all the ray-tracing.  This code projects the halos onto lens planes, in this case 20, and finds the deflection angle on each plane by a hybrid tree method.  In this way the halos have the mass, concentration and clustering properties from the nbody simulation, but within each strong lens the mass resolution is not limited by the original simulation, but follows the analytic mass profile.  
+Creating the mock images starts with a cosmological N-body simulation.  In this case it was the Millennium simulation \citep{2009MNRAS.398.1150B}.   A catalog of dark matter halos within a light-cone is constructed within the Millennium Observatory project \citep{2013MNRAS.428..778O}.   The challenge sets were based on a 1.6 sq.deg. light cone extending out to redshift $z=6$.
+The halo catalog is read into the GLAMER lensing code \citep{2014MNRAS.445.1942M,2014MNRAS.445.1954P} to do all the ray-tracing.  This code projects the halos onto lens planes, in this case 20, and finds the deflection angle on each plane by a hybrid tree method.  In this way the halos have the mass, concentration and clustering properties from the N-body simulation, but within each strong lens the mass resolution is not limited by the original simulation, but follows the analytic mass profile. {\color{red} MM: I am a bit confused: at this stage, how are the halos modeled? N-body or analytic? What is the shape of the halos?} 
 
 With GLAMER we identify and map out all the caustics within the light-cone for 33 source planes -- z=1 to 3 in intervals of 0.1 and 3 to 6 in intervals of 0.25.  We take every caustic that corresponded to a critical curve with an Einstein radius larger than 1.5 times the resolution of the final images.  The Einstein radius is estimated here and in all that follows as $R_{\rm ein}=\sqrt{A_{\rm ein}/\pi}$ where $A_{\rm ein}$ is the angular area within the critical curve.
 
- A **** square degree light-cone gives rise to **** such caustics, but these over count the number of lenses since most will have caustics on multiple source planes.  These lenses could be used as is, but we wanted to produce a much larger number with more randomness.   For each caustic we identify the lens plane with the highest convergence and identify all the halos within a three dimensional distance of 0.5 Mpc from the center of the critical curve and on this and its neighboring lens planes.    This collection of halos is then used as the lens and rotated to produce more random lenses.    It  contains all the subhalos and nearby companion halos, but not the large scale structure surrounding it.
+ A **** square degree light-cone gives rise to **** such caustics, but these over count the number of lenses since most will have caustics on multiple source planes.  These lenses could be used as is, but we wanted to produce a much larger number with more randomness.   For each caustic we identify the lens plane with the highest convergence and identify all the halos within a three dimensional distance of 0.5 Mpc from the center of the critical curve and on this and its neighboring lens planes.    This collection of halos is then used as the lens and rotated to produce more random lenses.    It  contains all the sub-halos and nearby companion halos, but not the large scale structure surrounding it.
 
 For lensed sources we use sources from the Hubble Ultra Deep Field (UDF) that have been decomposed into shapelet functions to remove noise.  This is the same set of images as used 
-in  \red{*** Massimo: Can you put a citation in for this?}.   There are 9,350 such sources with redshifts and separate shapelet coefficients in 10 bands. \red{(verify)}   
+in  \citep{2008A&A...482..403M,2010A&A...514A..93M,2016arXiv160604548M}.   There are 9,350 such sources with redshifts and separate shapelet coefficients in 4 bands.   
 
 To construct a mock lens, first a caustic on the highest redshift source plane is selected.  This is done in order of Einstein area, but all the critical curves are used more than once.  Since every lens with a caustic at a lower redshift will have a caustic at the highest redshift this is a selection from all of the caustics in the light-cone.   The lens is extracted as explained above and rotated randomly in three dimensions.  A source is selected at random from the shapelet catalog subject to a magnitude limit in a reference band.   The redshift of the UDF source is used as the source redshift.  If the source is at a lower redshift than the lens or within $\Delta z = 0.4$ another random source is selected.
 
 The furthest point in the caustic is found from its own center and the source is placed randomly within 3 times this distance.  This is a somewhat arbitrary length designed to be a compromise between producing only very clear strong lenses because all the sources are right in the center of the caustic and making the process  inefficient because most of the sources are too far away from the caustic to produce clear lenses.  If the source positions where taken completely at random the fraction of clear lenses would be very low.
 
-The visible galaxies associated with the lens must also be simulated.
-There were not enough large galaxies in the UDF catalog to make enough mock lens galaxies for this purpose.  Instead, for most of the lenses, we used an analytic model for the surface brightness of these galaxies.  The Millennium Observatory provides parameters for the galaxies that inhabit the dark matter halos using the semi-analytic galaxy formation models of \citet{2011MNRAS.413..101G}.  The parameters used here were the total magnitude, the bulge-to-disk ratio, the disk scale height and the bulge effective radius.  The magnitude and bulge-to-disk ratio are a function of the pass band.  Each galaxy is given a random orientation and inclination angle.between 0 and $80\degree$.  The disk is exponential with no vertical height which is why the inclination is limited to $80\degree$.  The bulge is represented by a S\'{e}rsic profile with a axis ratio randomly sampled between 0.5 and 1.  The S\'{e}rsic index, $n_s$, is given by 
+The visible galaxies associated with the lens must also be simulated. There  too few bright galaxies in the  in the UDF catalog to make enough mock lens galaxies for this purpose.  Instead, for most of the lenses, we used an analytic model for the surface brightness of these galaxies.  The Millennium Observatory provides parameters for the galaxies that inhabit the dark matter halos using the semi-analytic galaxy formation models of \citet{2011MNRAS.413..101G}.  The parameters used here were the total magnitude, the bulge-to-disk ratio, the disk scale height and the bulge effective radius.  The magnitude and bulge-to-disk ratio are a function of the pass band.  Each galaxy is given a random orientation and inclination angle.between 0 and $80\degree$.  The disk is exponential with no vertical height which is why the inclination is limited to $80\degree$.  The bulge is represented by a S\'{e}rsic profile with a axis ratio randomly sampled between 0.5 and 1.  The S\'{e}rsic index, $n_s$, is given by 
 \begin{align}
 \log( n_s )= 0.4 \log\left[ {\rm max}\left(\frac{B}{T},0.03\right)\right] + 0.1 x 
 \end{align}
-\red{(reference)} where $\frac{B}{T}$ is the bulge to total flux ratio and $x$ is a uniform random number between -1 and 1.  This approximately reproduces the observed correlation between these quantities.
+\red{(reference)} where $\frac{B}{T}$ is the bulge to total flux ratio and $x$ is a uniform random number between -1 and 1.  This approximately reproduces the observed correlation between these quantities. 
 
 In addition to the basic disk and bulge models we introduce some spiral arms.  The surface brightness of 
 the disks are given by
@@ -198,32 +197,32 @@ These foreground galaxies are rotated in three dimensions with the halos of the 
 
 These images of the of foreground galaxies are not intended to reproduce the true population of galaxies, but only to be sufficiently irregular to make them difficult to fit to a simple analytic model that might make them very easy to distinguish from a foreground plus a lensed image.   As will be discussed later, more realistic models will be needed in the future and are a subject of current investigation.
 
-To represent the mass of the galaxies we make a gridded map of the surface brightness at 3 times the resolution of the final image.  The surface brightness map in converted into a mass map by assuming a uniform mass-to-light ratio of 1.5 solar in the reference band.  This mass map is added to the lens before the ray tracing is done.
+To represent the mass of the galaxies we make a gridded map of the surface brightness at 3 times the resolution of the final image.  The surface brightness map in converted into a mass map by assuming a uniform mass-to-light ratio of 1.5 solar in the reference band.  This mass map is added to the lens before the ray tracing is done. {\color{red} MM: Again, I am confused with how the lenses are modeled in this stage of the simulation and during the search for caustics described in the beginning of this section.}
 
 The code is able to produce any combination of foreground galaxies, lensed image and noise that is desired.  For the training set we provided an image of the total lens with noise, an image of the foreground galaxies with noise and image of the lensed background source without noise.
 For the test sets only the final images were provided to participants although all the information was stored for analyzing the entries.
 
-\subsection{space-based}
+\subsection{Space-based}
 \label{sec:sim-space-based}
 
 For the space-based datasets the pixel size was set to 0.1 arcsec and 
 a simple Gaussian PSF was applied with a FWHM of 0.18 arcsec.  
-The reference band was SDSS I.  The noise is based on a 1,800 second exposure, a transmission of 0.3, a telescope diameter of 119~cm, a readout noise of 5 electrons per pixel and a sky background of 22.8 magnitudes per sq.arcsec.  
+The reference band was SDSS $i$.  The noise is based on a 1,800 second exposure, a transmission of 0.3, a telescope diameter of 119~cm, a readout noise of 5 electrons per pixel and a sky background of 22.8 magnitudes per sq.arcsec.  
 We use a simple Gaussian random realization of the noise uncorrelated between pixels.
  
  In the challenge set the limiting magnitude for background sources to 28 in K.   60\% of the cases had no background source and were thus labeled as non-lenses.
  
-\subsection{ground-based}
+\subsection{Ground-based}
 \label{sec:sim-ground-based}
 
-For the ground-based images four bands (I, G, U and R) where simulated.  The reference band was R.  For the challenge set 85\% images where made with purely simulated images as outlines above and the other 15\% used actual images taken from a preliminary sample of bright galaxies directly from the KiDS survey.  Lensed source images where added to these real images at the same rate as for the mock images,  in this case 50\%.  No attempt was made to match the halo masses to the observed galaxies in these cases.  These real images where added for more realism and so that, by comparing the results for real and mock images, we can evaluate how realistic our simulations are in this context.  There were about 160,000 of these stamps from KiDS.
+For the ground-based images four bands ($u,g,r$, and $i$) where simulated {\color{red} (these are SDSS filters too, right?)}.  The reference band was $r$.  For the challenge set 85\% images where made with purely simulated images as outlines above and the other 15\% used actual images taken from a preliminary sample of bright galaxies directly from the KiDS survey.  Lensed source images where added to these real images at the same rate as for the mock images,  in this case 50\%.  No attempt was made to match the halo masses to the observed galaxies in these cases.  These real images where added for more realism and so that, by comparing the results for real and mock images, we can evaluate how realistic our simulations are in this context.  There were about 160,000 of these stamps from KiDS.
 
 The KiDS survey provided a representative PSF map in each band that was applied to all mock images.   The pixel size in this case was 0.2~arcsec. 
-Weight maps for the KiDS images were also provided.  Some of these had masked regions from remove stars, cosmic rays and bad pixels.  For the mock images the noise was simulated by adding normally distributed numbers with the variance given by the weight maps.  The weight maps where also randomly rotated and flipped.  This resulted in many of the images having large masked regions in them.
+Weight maps for the KiDS images were also provided.  Some of these had masked regions from removed stars, cosmic rays, and bad pixels.  For the mock images the noise was simulated by adding normally distributed numbers with the variance given by the weight maps.  The weight maps where also randomly rotated and flipped.  This resulted in many of the images having large masked regions in them.
 
 By chance one of the original KiDS images appears to have been a lens.  When an additional lensed source was added this made a double lens or "jackpot" lens.
 
-\section{the entries}
+\section{The Entries}
 \label{sec:entries}
 
 There were 24 valid entries into the challenge.  They are listed in table~\ref{table:entries}.  There were a variety of different methods used and participants come from a variety of different backgrounds, most were professional astronomers, but there were also entries from people outside of the field.  
@@ -287,13 +286,17 @@ For the current SL challenge, arcfinder was tuned to detect long and narrow arcs
 
 The lens detector is based on a convolutional neural network (CNN), trained with the provided training datasets. The CNN is implemented in Python, using the TensorFlow framework\footnote{http://www.tensorflow.org/}. Both ground multichannel and space monochannel image classifiers have the exact same CNN architecture.
 
-The network itself consists of three convolutional layers ($11\times 11\times 32$, $5\times 5 \times 64$ and $3\times 3\times 64$), followed by two fully-connected layers ($256$ and $64$ neurons) and an output softmax layer. The first five layers use the ELU (Exponential Linear Unit) activation function \citep{2015arXiv151107289C}, which in our tests led to significantly faster convergence compared to ReLU and even SoftPlus activation. Dropout regularization \citep{2012arXiv1207.0580H,JMLR:v15:srivastava14a} is applied to both convolutional and fully connected layers, with ``keep'' probabilities $p=2/3$ and $p=1/2$, respectively.
+{\color{red} (MM: I think that the co-authors should provide a more detailed description of the algorithms. For example, they should quickly explain what is a CNN and what are its general components (i.e. what kind of layers, activation functions, etc.)}
+
+The network itself consists of three convolutional layers ($11\times 11\times 32$, $5\times 5 \times 64$ and $3\times 3\times 64$), followed by two fully-connected layers ($256$ and $64$ neurons) and an output softmax layer {\color{red} MM: the numbers make little sense without a description of what the mean -- see my previous comment}. The first five layers use the ELU (Exponential Linear Unit) activation function \citep{2015arXiv151107289C}, which in our tests led to significantly faster convergence compared to ReLU and even SoftPlus activation. Dropout regularization \citep{2012arXiv1207.0580H,JMLR:v15:srivastava14a} is applied to both convolutional and fully connected layers, with ``keep'' probabilities $p=2/3$ and $p=1/2$, respectively.
 
 Prior to entering the first convolutional layer, input image data are rescaled and dynamic-range compressed with function $f(x) =
 \mathrm{arcsinh} (10^{11} x)$, and bad pixels are simply set to 0.
 Data augmentation is performed in the form of random up-down and left-right image flipping, plus $k\pi/2$ rotations, where $k$ is a random integer in the $[0,3]$ range. Additionally, a small rotation with random angle $\theta$ is applied, involving bicubic image resampling. $\theta$ follows a Gaussian distribution with mean $\mu=0$ and standard deviation $\sigma_{\theta}=5^{\circ}$. No attempt was made to generate and randomize bad pixel masks in the data augmentation process.
 
 The CNN weights are initialized to random values using a truncated Gaussian distribution with mean $\mu=0$ and standard deviation $\sigma=5.10^{-2}$. The network is trained on a Titan-X ``Pascal'' nVidia GPU using the Adam gradient-based optimizer \citep{2014arXiv1412.6980K} during 800 epochs, with an initial learning rate $\eta(t=0)=10^{-3}$ and a learning rate decay $\eta(t+1)/\eta(t)=0.99$, where $t$ is the epoch. Because of a lack of time, tests were limited to assessing the basic classification performance on a subset of the of 1,000 images/datacubes, using the 19,000 others for training.
+
+{\red MM: May be we could separate the methods into three categories: machine-learning, arc-finders, visual inspection and group them accordingly}
 
 \subsection{YattaLens Lite (Sonnenfeld)}
 YattaLensLite is a simpler version of the algorithm YattaLens \citep{Sonnenfeld17}, modified to meet the time constraints of the challenge.
@@ -733,7 +736,7 @@ Foundation and its founder Fred Kavli.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%% REFERENCES %%%%%%%%%%%%%%%%%%
 
-\bibliographystyle{mn2e}
+\bibliographystyle{mnras}
 \bibliography{references}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
