--- a/references.bib
+++ b/references.bib
@@ -1272,3 +1272,33 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{2004PASP..116..750G,
+   author = {{Grazian}, A. and {Fontana}, A. and {De Santis}, C. and {Gallozzi}, S. and 
+	{Giallongo}, E. and {Di Pangrazio}, F.},
+    title = "{The Large Binocular Camera Image Simulator}",
+  journal = {\pasp},
+ keywords = {astronomical databases: miscellaneous, Methods: Data Analysis, Techniques: Photometric},
+     year = 2004,
+    month = aug,
+   volume = 116,
+    pages = {750-761},
+      doi = {10.1086/423123},
+   adsurl = {http://adsabs.harvard.edu/abs/2004PASP..116..750G},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2011arXiv1110.3193L,
+   author = {{Laureijs}, R. and {Amiaux}, J. and {Arduini}, S. and {Augu{\`e}res}, J.~-. and 
+	{Brinchmann}, J. and {Cole}, R. and {Cropper}, M. and {Dabin}, C. and 
+	{Duvet}, L. and {Ealet}, A. and et al.},
+    title = "{Euclid Definition Study Report}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1110.3193},
+ primaryClass = "astro-ph.CO",
+ keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics, Astrophysics - Galaxy Astrophysics},
+     year = 2011,
+    month = oct,
+   adsurl = {http://adsabs.harvard.edu/abs/2011arXiv1110.3193L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
