Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -1,4 +1,4 @@
-e
+
 \documentclass[useAMS,usenatbib]{mnras}
 
 \usepackage{graphicx}
@@ -67,7 +67,7 @@ Emmanuel Bertin,$^3$
 \newauthor
 R\'emi Cabanac,$^2$ 
 Etienne Decenci\`ere,$^{10}$
-Remi Flamary,$^8$
+R\'emi Flamary,$^8$
 Raphael Gavazzi,$^{17}$ 
 \newauthor
 Mario Geiger,$^6$ 
@@ -98,7 +98,7 @@ $^{6}$ \red{EPFL}\\
 $^{7}$ Jodrell Bank Centre for Astrophysics, School of Physics \& Astronomy, University of Manchester, Oxford Rd, Manchester M13 9PL, UK \\
 $^{8}$ Laboratoire Lagrange, Universi\'{e} de Nice Sophia-Antipolis, Centre National de la Recherche Scientifique, Observatoire de la C\^{o}te d'Azur, \\ Parc Valrose, 06108 Nice, France \\
 $^{9}$ LERMA, Observatoire de Paris, CNRS, Universit\'e Paris Diderot, 61, Avenue de l'Observatoire F-75014, Paris, France \\
-$^{10}$ Centre for mathematical morphology, Mathematics and Systems department, MINES ParisTech, 35 rue Saint-Honore, Fontainebleau, France \\
+$^{10}$ MINES Paristech, PSL Research University, Centre for Mathematical Morphology, 35 rue Saint-Honore, Fontainebleau, France \\
 $^{11}${Enrico Fermi Institute, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
 $^{12}${Kavli Institute for Cosmological Physics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
 $^{13}${Department of Astronomy \& Astrophysics, The University of Chicago, Chicago, IL 60637 U.S.A.}\\
