--- a/references.bib
+++ b/references.bib
@@ -1302,3 +1302,19 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2011arXiv1110.3193L},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2017arXiv170401585S,
+   author = {{Sonnenfeld}, A. and {Chan}, J.~H.~H. and {Shu}, Y. and {More}, A. and 
+	{Oguri}, M. and {Suyu}, S.~H. and {Wong}, K.~C. and {Lee}, C.-H. and 
+	{Coupon}, J. and {Yonehara}, A. and {Bolton}, A.~S. and {Jaelani}, A.~T. and 
+	{Tanaka}, M. and {Miyazaki}, S. and {Komiyama}, Y.},
+    title = "{Survey of Gravitationally-lensed Objects in HSC Imaging (SuGOHI). I. Automatic search for galaxy-scale strong lenses}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1704.01585},
+ keywords = {Astrophysics - Astrophysics of Galaxies},
+     year = 2017,
+    month = apr,
+   adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170401585S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
