--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@article{hartley2017support,
+  title={Support Vector Machine classification of strong gravitational lenses},
+  author={Hartley, P and Flamary, R and Jackson, N and Tagore, AS and Metcalf, RB},
+  year = "2017",
+  month = "7",
+  journal = "Monthly Notices of the Royal Astronomical Society",
+  issn = "0035-8711",
+  publisher = "Oxford University Press",
+}
+
+
 @ARTICLE{2007A&A...461..813C,
    author = {{Cabanac}, R.~A. and {Alard}, C. and {Dantel-Fort}, M. and {Fort}, B. and 
 	{Gavazzi}, R. and {Gomez}, P. and {Kneib}, J.~P. and {Le F{\`e}vre}, O. and 
