Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -136,14 +136,14 @@ Their magnification has been used as a natural telescope to observe otherwise un
 
 The Square Kilometer Array (SKA)\footnote{http://skatelescope.org/}, the Large Synoptic Survey Telescope (LSST)\footnote{https://www.lsst.org/} and the Euclid space telescope\footnote{https://www.euclid-ec.org/} are expected to increase the number of potential lenses by orders of magnitude \citep{collett_15,euclidSLWGwhitepaper,2015aska.confE..84M,2010MNRAS.405.2579O}.   For example it is estimated that there will be approximately 200,000 observable galaxy-galaxy lenses in the Euclid data set among \red{tens of billions (better number??)} of potential objects .  So far, less than a thousand lenses have been found in total across many heterogeneous data sets.  These surveys will bring a new era for strong lensing where large relatively well defined samples of lenses will be possible.  It will also require handling much larger quantities of data than has been customary in this field.
 
-Up to this point, the most widely used method for finding lenses in imaging surveys has been by visual inspection of a samples candidates that have been selected on the bases of luminosity and/or color.  This has been done in the radio \citep{2003MNRAS.341...13B} and in the visible with space and ground based data \citep{2008MNRAS.389.1311J,2008ApJS..176...19F} \red{(Maybe there are some others to cite here?)}.  A related method pioneered by the SPACE WARPS project \citep{2016MNRAS.455.1171M,2016MNRAS.455.1191M} has been to crowd source the visual inspection through an online platform.  These efforts have proved very fruitful, but they deal with orders of magnitude fewer candidates and lenses than will be necessary in the future.  Dealing with such large quantities of data will not be practical for any visual inspection approach.  In addition, the efficiency and detection bias of human inspection methods are difficult to rigorously quantify.
+Up to this point, the most widely used method for finding lenses in imaging surveys has been by visual inspection of a samples candidates that have been selected on the bases of luminosity and/or color.  This has been done in the radio \citep{2003MNRAS.341...13B} and in the visible with space and ground based data \citep{2008MNRAS.389.1311J,2008ApJS..176...19F,2014MNRAS.439.3392P} \red{(Maybe there are some others to cite here?)}.  A related method pioneered by the SPACE WARPS project \citep{2016MNRAS.455.1171M,2016MNRAS.455.1191M} has been to crowd source the visual inspection through an online platform.  These efforts have proved very fruitful, but they deal with orders of magnitude fewer candidates and lenses than will be necessary in the future.  Dealing with such large quantities of data will not be practical for any visual inspection approach.  In addition, the efficiency and detection bias of human inspection methods are difficult to rigorously quantify.
 
 Galaxy scale lenses have also been searched for spectroscopicly by looking for high redshift stellar lines in the spectra of lower redshift large galaxies.  Notably this was done in the Sloan Lens ACS (SLACS) survey to producing a relatively well defined and pure sample of Einstein ring lenses \citep{2006ApJ...638..703B}.  However, spectroscopy is telescope-time consuming and for the foreseeable future we are not likely to have spectroscopic surveys that cover anywhere near the number of objects as the planned imaging surveys.
 
 Some automated algorithms have been developed in the past to detect lenses in images.  These have been designed to detect arc-like features \citep{2006astro.ph..6757A,2007A&A...472..341S} and rings \citep{2014ApJ...785..144G,2014A&A...566A..63J}.  They have been applied to survey data and found of order 200 lenses \citep{2007A&A...461..813C,2012ApJ...749...38M,2016A&A...592A..75P}.  Another approach has been to use a lens modeling code to fit a model to all the candidates and pick out the ones that fit the model well \citep{2009ApJ...694..924M,2010A&A...517A..25S,2017arXiv170401585S}.
 
 More recently machine learning techniques that have become widely used in the fields computer image processing and artificial intelligence 
-have been applied to this problem and others in astronomy, in particular, artificial neural networks (ANNs) and support vector machines (SVM). These algorithms do not pick out particular predefined features, but learn from a training set which features are most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy they are beginning to be used for catagorizing galaxies morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017arXiv170207675P,2017MNRAS.465.4325O}.
+have been applied to this problem and others in astronomy, in particular, artificial neural networks (ANNs) and support vector machines (SVM). These algorithms do not pick out particular predefined features, but learn from a training set which features are most important for distinguishing categories of objects.  These have been used widely for such tasks as handwriting and facial recognition.  In astronomy they are beginning to be used for catagorizing galaxies morphologies \citep{2015MNRAS.450.1441D}, photometric redshifts \citep{2017MNRAS.465.1959C,2016PASP..128j4502S,2017NewA...51..169S}, supernova classification \citep{2016ApJS..225...31L} and the lens finding problem \citep{2017MNRAS.471..167J,2017arXiv170207675P,2017MNRAS.465.4325O}.
 
 Given the future of this field with large amounts of data coming soon and many new ideas emerging, it is timely to stage a series of challenges to stimulate new work, determine what can realistically be done in lens finding and get a better idea of the strengths and weaknesses to different methods.  The long term goal is to get a set of algorithms that can handle Euclid, LSST or SKA data sets and produce high purity and high completeness lens samples with well defined efficiency or selection.  We anticipate further challenges in the future were the realism of the data simulations will become progressively larger.  Here we have chosen to concentrate on galaxy/small group scale lenses where the background source is a galaxy because we feel that this is where the most progress can be made and the scientific return is the highest, but QSO lenses and cluster/group lenses challenges may follow.
 
