--- a/references.bib
+++ b/references.bib
@@ -1329,3 +1329,38 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170401585S},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{2017MNRAS.471..167J,
+   author = {{Jacobs}, C. and {Glazebrook}, K. and {Collett}, T. and {More}, A. and 
+	{McCarthy}, C.},
+    title = "{Finding strong lenses in CFHTLS using convolutional neural networks}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1704.02744},
+ primaryClass = "astro-ph.IM",
+ keywords = {gravitational lensing: strong, methods: statistical},
+     year = 2017,
+    month = oct,
+   volume = 471,
+    pages = {167-181},
+      doi = {10.1093/mnras/stx1492},
+   adsurl = {http://adsabs.harvard.edu/abs/2017MNRAS.471..167J},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014MNRAS.439.3392P,
+   author = {{Pawase}, R.~S. and {Courbin}, F. and {Faure}, C. and {Kokotanekova}, R. and 
+	{Meylan}, G.},
+    title = "{A 7 deg$^{2}$ survey for galaxy-scale gravitational lenses with the HST imaging archive}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1206.3412},
+ keywords = {Gravitational lensing: strong, surveys, galaxies: evolution, galaxies: formation, dark matter},
+     year = 2014,
+    month = apr,
+   volume = 439,
+    pages = {3392-3404},
+      doi = {10.1093/mnras/stu179},
+   adsurl = {http://cdsads.u-strasbg.fr/abs/2014MNRAS.439.3392P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
